including gcloud login auth

--- a/oslo_bysykkel_v4_cloud/cloudbuild.yaml
+++ b/oslo_bysykkel_v4_cloud/cloudbuild.yaml
@@ -1,5 +1,8 @@
 steps:
   - name: 'docker/compose:1.26.2'
-    args: ['up', '-d']
+    args: ['up']
+
+options:
+  logging: CLOUD_LOGGING_ONLY
 
 timeout: '200s'
